<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExMultiButton</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!--<string name="phone_n">電話號碼：</string>-->
    <string name="phone_n">總數：</string>
    <string name="phone_1">1</string>
    <string name="phone_2">2</string>
    <string name="phone_3">3</string>
    <string name="phone_4">4</string>
    <string name="phone_5">5</string>
    <string name="phone_6">6</string>
    <string name="phone_7">7</string>
    <string name="phone_8">8</string>
    <string name="phone_9">9</string>
    <string name="phone_10">*</string>
    <string name="phone_11">0</string>
    <string name="phone_12">#</string>
    <string name="_0">0</string>

</resources>
